# rustats

./: .gitignore  Cargo.toml  README.md  pyproject.toml  rustats.pyi
src/: calculators.rs  classes.rs  heaps.rs  lib.rs  medians.rs  ranking.rs  stats.rs  templates.rs
tests/: funcs.py  groups.py  main.py  manager.py  plots.py  pyproject.toml  stats.py  structs.py  ui.py
